# game_of_life

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  example.cpp  requirements.txt
src/: CMakeLists.txt
src/cpp/: GLFWFunctions.cpp  GLFWFunctions.h  Helper.cpp  Helper.h  Interface.h  Main.cpp  PythonFunctions.cpp  PythonFunctions.h  Render.cpp  Render.h  Simulation.cpp  Simulation.h  SimulationConfig.h.in
src/cpp/openglext/: glad.c
src/cpp/openglext/include/glad/: glad.h
src/glsl/: fragment.glsl  vertex.glsl
src/python/: game.py  simulation.py
test/: CMakeLists.txt
test/cpp/: Simulation.cpp  SimulationTest.cpp  TestInterface.cpp
